spenso/src/snapshots/spenso__tests__single_contract.snap
---
source: src/tests.rs
expression: "(structa, structb)"
---
(VecStructure(
  structure: [
    Slot(
      aind: Normal(1),
      rep: Representation(
        dim: Concrete(4),
        rep: LorentzUp(Lorentz()),
      ),
    ),
    Slot(
      aind: Normal(2),
      rep: Representation(
        dim: Concrete(4),
        rep: LorentzUp(Lorentz()),
      ),
    ),
  ],
), VecStructure(
  structure: [
    Slot(
      aind: Normal(3),
      rep: Representation(
        dim: Concrete(4),
        rep: LorentzDown(Dual(
          inner: Lorentz(),
        )),
      ),
    ),
    Slot(
      aind: Normal(1),
      rep: Representation(
        dim: Concrete(4),
        rep: LorentzDown(Dual(
          inner: Lorentz(),
        )),
      ),
    ),
    Slot(
      aind: Normal(4),
      rep: Representation(
        dim: Concrete(5),
        rep: LorentzUp(Lorentz()),
      ),
    ),
  ],
))
